Mi segundo commit

--- a/web.html
+++ b/web.html
@@ -8,6 +8,9 @@
             <h1>
                 Hola Queridos Estudiantes
             </h1>
+            <h2>
+                Les recuerdo tomar el curso de Github de Platzi
+            </h2>
         </div>
     </body>
 </html>
